# CS2-AI

./: CMakeLists.txt
CS2-AI/: CMakeLists.txt
CS2-AI/include/CS2/: GameInformationHandler.h  Overlay.h
CS2-AI/src/: main.cpp
CS2-AI/src/CS2/: Aimbot.cpp  GameInformationHandler.cpp  Overlay.cpp
CS2-AI/src/UI/: MainWindow.cpp
